changed new Long to Long.valueOf